* Add new component for selecting data points (ma-data-point-selector)
* Use ma-data-point-selector for selecting points on the data point details page, script context points and publisher points
* Add button to install Mango UI as an app to login screen and user menu
* Add ma-tile-map component for displaying OpenStreetMap or Mapbox maps
* Order log files by date on server status page

*Version 3.6.4*
* Transclude content of indicator into template

*Version 3.6.3*
* Add inputs for mailing list edit and read roles
* Send test email to selected user
* Fix cron pattern for every x months
* Delete the id field when copying a resource
* ma-validation-messages directive - Replace addControl method on child forms too
* Fix for editing/updating points from static watchlist
* Fix for being unable to remove all tags from a data point
* Add option to display tags on point value directive label
* Add options for displaying data point labels to ma-switch, ma-gauge-chart, ma-bar-display, ma-switch-img, and ma-indicator
* Add attribute for setting bar color to ma-bar-display
* Add option to show value on ma-bar-display

*Version 3.6.2*
* Add inputs for script permissions to event handlers
* Redirect to password reset page when a token is present in the URL

*Version 3.6.1*
* Fix bug that prevented adding more than 100 data points to static watch list via point hierarchy
* Allow free text input for ma-serial-port-select port component

*Version 3.6.0*
* Upgraded to work with core version 3.6.x
* Add 'Data sources' page for creating/updating/deleting data sources and data points. Note: not all data source types supported yet.
* Added Spanish translation file
* Update 'Bulk data point edit' page to use same data point editor dialog as "Data sources" page
* Add 'Event handlers' page for creating/updating/deleting event handlers
* Add dialog for for creating/updating/deleting event detectors (opened from 'Data point details' or 'Data sources' page)