@@ -16,7 +16,7 @@ public class UICommon {
     public static final String UI_NOT_FOUND_PAGE = "ui.notFound.page";
     public static final String UI_ERROR_PAGE = "ui.error.page";
 
-    public static final String DEFAULT_UI_LOGIN_PAGE = "/ui/login";
+    public static final String DEFAULT_UI_LOGIN_PAGE = "/ui/";
     public static final String DEFAULT_UI_PASSWORD_RESET_PAGE = "/ui/change-password";
     public static final String DEFAULT_UI_FIRST_USER_LOGIN_PAGE = "/ui/help/getting-started";
     public static final String DEFAULT_UI_LOGGED_IN_PAGE = "/ui/data-point-details/";
